PLayout bug 修复了

--- a/test/manual/styles.less
+++ b/test/manual/styles.less
@@ -7,7 +7,7 @@
     width: 120px;
     height: 32px;
   }
-  >div {
+  .test-layout>div {
     display: flex;
     margin-top: 30px;
   }
